--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aniso8601==8.0.0
 aspy.yaml==1.3.0
+atomicwrites==1.3.0
+attrs==19.3.0
 autopep8==1.4.4
 beautifulsoup4==4.8.1
 bs4==0.0.1
@@ -20,12 +22,18 @@ MarkupSafe==1.1.1
 more-itertools==7.2.0
 nodeenv==1.3.3
 numpy==1.17.2
+packaging==19.2
 pandas==0.25.1
+pluggy==0.13.0
 post==2019.4.13
 pre-commit==1.18.3
 public==2019.4.13
+py==1.8.0
 pycodestyle==2.5.0
+pyparsing==2.4.2
 PyPDF2==1.26.0
+pytest==5.2.1
+pytest-mock==1.11.1
 python-dateutil==2.8.0
 pytz==2019.3
 PyYAML==5.1.2
@@ -37,5 +45,6 @@ soupsieve==1.9.4
 toml==0.10.0
 urllib3==1.25.6
 virtualenv==16.7.5
+wcwidth==0.1.7
 Werkzeug==0.16.0
 zipp==0.6.0
